Intellij compilation issue correction